# BloodMoon_SemanticTopologyEngine_demo

./: README.md  pyproject.toml  setup.cfg
demo/: artifact_demo.py  drift_focus_demo.py  minimal_run.py
ste/: __init__.py  artifacts.py  coherence.py  drift.py  engine.py  focus.py  inversion.py  morphotype.py  operators.py
tests/: test_engine.py  test_morphotype.py
