[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-topology-engine"
version = "0.1.0"
description = "SemanticTopologyEngine (STE) – a minimal framework for semantic geometry and morphotype dynamics."
authors = [
  { name = "Dome", email = "example@example.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/M0ndai/BloodMoon_SemanticTopologyEngine_demo"

[tool.setuptools]
py-modules = [
  "drift",
  "coherence",
  "focus",
  "inversion",
]

[tool.setuptools.packages.find]
where = ["."]
