[metadata]
name = semantic-topology-engine
version = 0.1.0
description = SemanticTopologyEngine (STE) – a minimal framework for semantic geometry and morphotype dynamics.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Dome
url = https://github.com/M0ndai/BloodMoon_SemanticTopologyEngine_demo

[options]
python_requires = >=3.10
install_requires =
    numpy>=1.24.0
py_modules =
    drift
    coherence
    focus
    inversion

[options.extras_require]
dev =
    pytest
    black
    mypy
